--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/dnenciso/final.github.io.git",
+  "homepage": "http://dnenciso.github.io/trabajofinal/",
   "name": "crud-react",
   "version": "0.1.0",
   "private": true,
@@ -14,11 +14,11 @@
     "uuid": "^7.0.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
